--- a/css/global.less
+++ b/css/global.less
@@ -165,12 +165,12 @@
 
 /*macro 宏栏目
 ------------------------------------------*/
-@import url('tobe/macro/m-macro-sidebar.less');
+/*@import url('tobe/macro/m-macro-sidebar.less');
 @import url('tobe/macro/m-macro-nav.less');		//宏心法导航
 @import url('tobe/macro/m-macro-view.less');
 @import url('tobe/macro/m-macro-sytax.less');
 @import url('tobe/macro/m-macro-post.less');
-@import url('tobe/macro/macro.less');
+@import url('tobe/macro/macro.less');*/
 
 /*tool 工具栏目
 ------------------------------------------*/
