--- a/css/global/layout.less
+++ b/css/global/layout.less
@@ -22,11 +22,11 @@ body{
 
 //内容区域包裹层
 	//默认
-	.jx3pve-container{
+	body{
 	    padding-top:@c-header-height;
 	}
 	//手机
-	.ua-responsive .screen-s .jx3pve-container{
+	.ua-responsive body.screen-s{
 		padding-bottom:@c-footer-height;
 	}
 
