--- a/css/module/forum/forum.less
+++ b/css/module/forum/forum.less
@@ -1,7 +1,9 @@
 @import url('reset.less');	
 @import url('layout.less');
 
-@import url('sidebar/sidebar.less');
+@import url('sidebar/title.less');
+@import url('sidebar/search.less');
+@import url('sidebar/list.less');
 
 @import url('viewthread/c-fli.less');
 @import url('viewthread/c-fli-title.less');
