--- a/css/module/forum/post/c-post-body.less
+++ b/css/module/forum/post/c-post-body.less
@@ -60,7 +60,7 @@ body .edt{
 }
 
 //平板竖屏下
-.ua-responsive .screen-m .edt .bar{
+/*.ua-responsive .screen-m .edt .bar{
 	.u-codemode,.u-panelbox{
 		float:none;
 	}
@@ -81,7 +81,9 @@ body .edt{
 	.u-panelbox{
 		.db;
 	}
-}
+}*/
+
+//手机
 .ua-responsive .screen-s .edt .bar{
 	.none;
 }
