--- a/css/module/forum/post/c-post-custom.less
+++ b/css/module/forum/post/c-post-custom.less
@@ -3,6 +3,8 @@
 .c-post-custom-warning{
 	.tips(yel);
 	margin-bottom:10px;
+	padding: 0 10px;
+    border: 1px dashed #efaa00;
 }
 
 .c-post-custom-list{
@@ -22,6 +24,9 @@
 	.u-check{
 		.pa;.rt(0,0);
 		.w(60px);
+		img{
+		    margin-top: -3px;
+		}
 	}
 	.u-content{
 		.db;
