--- a/css/module/forum/post/c-post-tips.less
+++ b/css/module/forum/post/c-post-tips.less
@@ -10,3 +10,22 @@
     margin-top: 10px;
     //border:1px dashed #ddd;
 }
+
+#c-post-tips-tg{
+	.none;
+	background:~"url('@{url}icon/info.gif') no-repeat right center / auto 80%";
+	color:#222;
+}
+.ua-responsive .screen-s{
+	#c-post-tips-tg{.db;}
+	#c-post-tips-content{.none;}
+
+	#c-post-tips-content{
+		.pf;.lt(0,0);.full;
+		z-index: 40;
+	    background-color: rgba(255,255,255,0.95);
+	    padding: 20px;
+	    box-sizing: border-box;
+        overflow: auto;
+	}
+} 
