--- a/css/module/ui/select.less
+++ b/css/module/ui/select.less
@@ -2,7 +2,7 @@
 .ftid a{
 	border:1px solid #ddd;
 	box-shadow: 0 0 1px #ddd inset;
-	padding:2px 14px 2px 7px;
+	padding:2px 25px 2px 5px;
 	.r(2px);
 	.lh(22px);
 	font-size:inherit;
@@ -54,4 +54,8 @@
 .colorwd{
 	.size(23px) !important;
 	padding:0 !important;
+}
+
+select{
+    max-width: 100%;
 }
