--- a/css/module/widget/w-route.less
+++ b/css/module/widget/w-route.less
@@ -1,8 +1,8 @@
 #pt{
-	.auto(x);
+	margin:0 auto;
 	border:none;
 	padding: 5px 0;
-    border-bottom: 1px dotted #ddd;
+    border-bottom: 1px dotted #ccc;
     //margin-bottom:10px;
     .lh(29px);
     .pr;
