--- a/css/system/about/log.less
+++ b/css/system/about/log.less
@@ -8,6 +8,22 @@
 .m-about-log{
 	margin-bottom:10px;
 }
+.c-fli-custom{
+	line-height:2.5;
+	ul{}
+	li{}
+	border-bottom:1px solid #eee;
+	em{
+		background-color:#f2f2f2;
+		.r(2px);
+		padding: 3px 6px;
+		margin-right: 5px;
+		color:#555;
+	}
+	span{
+
+	}
+}
 
 //发布按钮
 .u-btn-publish{
