--- a/css/system/about/sidebar.less
+++ b/css/system/about/sidebar.less
@@ -12,3 +12,6 @@
 .pg_forumdisplay .i-header{
 	.z(40);
 }
+.alertHTML.ua-responsive .screen-s .default-sidebar{
+	top:@c-header-height + @c-alert-height;
+}
