--- a/css/tobe/global/layout.less
+++ b/css/tobe/global/layout.less
@@ -5,8 +5,8 @@
 }*/
 //内容区
 .box {
-    padding-top:@c-header-height;
-    margin:0 !important;
+    //padding-top:@c-header-height;
+    //margin:0 !important;
 }
 //平铺背景层
 .wrap {
