--- a/template/macro/forum/sidebar.htm
+++ b/template/macro/forum/sidebar.htm
@@ -1,55 +1,62 @@
 <!-- jx3pve:心法导航 -->
-<div class="m-macro-nav">
+<h2 class="default-sidebar-title m-macro-nav-title">分类导航<a class="u-more" href="./macro" title="全部">全部</a></h2>
+<div class="default-sidebar-content m-macro-nav">
 	<ul>
-		<li class="u-first" style="width:100%"><a href="http://www.jx3pve.com/forum.php?mod=forumdisplay&fid=294&filter=sortid&sortid=18&searchsort=1&macro_role=1&page=1&orderby=lastedit"><i class="ty" ></i>通用<span>（节日/副本/特殊等）</span></a></li>
-		<li><a href="http://www.jx3pve.com/forum.php?mod=forumdisplay&fid=294&filter=sortid&sortid=18&searchsort=1&macro_role=22&page=1&orderby=lastedit"><i class="mw" ></i>莫问</a></li>
-		<li><a href="http://www.jx3pve.com/forum.php?mod=forumdisplay&fid=294&filter=sortid&sortid=18&searchsort=1&macro_role=23&page=1&orderby=lastedit"><i class="xz"></i>相知</a></li>
-		<li><a href="http://www.jx3pve.com/forum.php?mod=forumdisplay&fid=294&filter=sortid&sortid=18&searchsort=1&macro_role=2&page=1&orderby=lastedit"><i class="bx" ></i>冰心</a></li>
-		<li><a href="http://www.jx3pve.com/forum.php?mod=forumdisplay&fid=294&filter=sortid&sortid=18&searchsort=1&macro_role=19&page=1&orderby=lastedit"><i class="nx"></i>云裳</a></li>
-		<li><a href="http://www.jx3pve.com/forum.php?mod=forumdisplay&fid=294&filter=sortid&sortid=18&searchsort=1&macro_role=3&page=1&orderby=lastedit"><i class="hj"></i>花间</a></li>
-		<li><a href="http://www.jx3pve.com/forum.php?mod=forumdisplay&fid=294&filter=sortid&sortid=18&searchsort=1&macro_role=20&page=1&orderby=lastedit"><i class="nh"></i>离经</a></li>
-		<li><a href="http://www.jx3pve.com/forum.php?mod=forumdisplay&fid=294&filter=sortid&sortid=18&searchsort=1&macro_role=4&page=1&orderby=lastedit"><i class="dj"></i>毒经</a></li>
-		<li><a href="http://www.jx3pve.com/forum.php?mod=forumdisplay&fid=294&filter=sortid&sortid=18&searchsort=1&macro_role=21&page=1&orderby=lastedit"><i class="nd"></i>补天</a></li>
-		<li><a href="http://www.jx3pve.com/forum.php?mod=forumdisplay&fid=294&filter=sortid&sortid=18&searchsort=1&macro_role=5&page=1&orderby=lastedit"><i class="axzy"></i>傲血</a></li>
-		<li><a href="http://www.jx3pve.com/forum.php?mod=forumdisplay&fid=294&filter=sortid&sortid=18&searchsort=1&macro_role=15&page=1&orderby=lastedit"><i class="tll"></i>铁牢</a></li>
-		<li><a href="http://www.jx3pve.com/forum.php?mod=forumdisplay&fid=294&filter=sortid&sortid=18&searchsort=1&macro_role=6&page=1&orderby=lastedit"><i class="fysj" ></i>焚影</a></li>
-		<li><a href="http://www.jx3pve.com/forum.php?mod=forumdisplay&fid=294&filter=sortid&sortid=18&searchsort=1&macro_role=16&page=1&orderby=lastedit"><i class="mjt"></i>明尊</a></li>
-		<li><a href="http://www.jx3pve.com/forum.php?mod=forumdisplay&fid=294&filter=sortid&sortid=18&searchsort=1&macro_role=7&page=1&orderby=lastedit"><i class="yj" ></i>易筋</a></li>
-		<li><a href="http://www.jx3pve.com/forum.php?mod=forumdisplay&fid=294&filter=sortid&sortid=18&searchsort=1&macro_role=18&page=1&orderby=lastedit"><i class="xs"  ></i>洗髓</a></li>
-		<li><a href="http://www.jx3pve.com/forum.php?mod=forumdisplay&fid=294&filter=sortid&sortid=18&searchsort=1&macro_role=8&page=1&orderby=lastedit"><i class="qc"></i>紫霞</a></li>
-		<li><a href="http://www.jx3pve.com/forum.php?mod=forumdisplay&fid=294&filter=sortid&sortid=18&searchsort=1&macro_role=9&page=1&orderby=lastedit"><i class="jc" ></i>太虚</a></li>
-		<li><a href="http://www.jx3pve.com/forum.php?mod=forumdisplay&fid=294&filter=sortid&sortid=18&searchsort=1&macro_role=10&page=1&orderby=lastedit"><i class="tl" ></i>天罗</a></li>
-		<li><a href="http://www.jx3pve.com/forum.php?mod=forumdisplay&fid=294&filter=sortid&sortid=18&searchsort=1&macro_role=11&page=1&orderby=lastedit"><i class="jy" ></i>惊羽</a></li>
-		<li><a href="http://www.jx3pve.com/forum.php?mod=forumdisplay&fid=294&filter=sortid&sortid=18&searchsort=1&macro_role=14&page=1&orderby=lastedit"><i class="cyj" ></i>分山</a></li>
-		<li><a href="http://www.jx3pve.com/forum.php?mod=forumdisplay&fid=294&filter=sortid&sortid=18&searchsort=1&macro_role=17&page=1&orderby=lastedit"><i class="tgy"></i>铁骨</a></li>
-		<li><a href="http://www.jx3pve.com/forum.php?mod=forumdisplay&fid=294&filter=sortid&sortid=18&searchsort=1&macro_role=12&page=1&orderby=lastedit"><i class="cj"  ></i>藏剑</a></li>
-		<li><a href="http://www.jx3pve.com/forum.php?mod=forumdisplay&fid=294&filter=sortid&sortid=18&searchsort=1&macro_role=13&page=1&orderby=lastedit"><i class="gb" ></i>丐帮</a></li>
+		<li class="u-first" style="width:100%"><a href="./forum.php?mod=forumdisplay&fid=294&filter=typeid&typeid=396&sortid=18{if $_GET['orderby']}&orderby=$_GET['orderby']{/if}"><i class="ty" ></i>通用<span>（节日/副本/特殊等）</span></a></li>
+		<li><a href="./forum.php?mod=forumdisplay&fid=294&filter=typeid&typeid=394&sortid=18{if $_GET['orderby']}&orderby=$_GET['orderby']{/if}"><i class="mw" ></i>莫问</a></li>
+		<li><a href="./forum.php?mod=forumdisplay&fid=294&filter=typeid&typeid=395&sortid=18{if $_GET['orderby']}&orderby=$_GET['orderby']{/if}"><i class="xz"></i>相知</a></li>
+		<li><a href="./forum.php?mod=forumdisplay&fid=294&filter=typeid&typeid=374&sortid=18{if $_GET['orderby']}&orderby=$_GET['orderby']{/if}"><i class="bx" ></i>冰心</a></li>
+		<li><a href="./forum.php?mod=forumdisplay&fid=294&filter=typeid&typeid=375&sortid=18{if $_GET['orderby']}&orderby=$_GET['orderby']{/if}"><i class="nx"></i>云裳</a></li>
+		<li><a href="./forum.php?mod=forumdisplay&fid=294&filter=typeid&typeid=376&sortid=18{if $_GET['orderby']}&orderby=$_GET['orderby']{/if}"><i class="hj"></i>花间</a></li>
+		<li><a href="./forum.php?mod=forumdisplay&fid=294&filter=typeid&typeid=377&sortid=18{if $_GET['orderby']}&orderby=$_GET['orderby']{/if}"><i class="nh"></i>离经</a></li>
+		<li><a href="./forum.php?mod=forumdisplay&fid=294&filter=typeid&typeid=378&sortid=18{if $_GET['orderby']}&orderby=$_GET['orderby']{/if}"><i class="dj"></i>毒经</a></li>
+		<li><a href="./forum.php?mod=forumdisplay&fid=294&filter=typeid&typeid=379&sortid=18{if $_GET['orderby']}&orderby=$_GET['orderby']{/if}"><i class="nd"></i>补天</a></li>
+		<li><a href="./forum.php?mod=forumdisplay&fid=294&filter=typeid&typeid=380&sortid=18{if $_GET['orderby']}&orderby=$_GET['orderby']{/if}"><i class="axzy"></i>傲血</a></li>
+		<li><a href="./forum.php?mod=forumdisplay&fid=294&filter=typeid&typeid=381&sortid=18{if $_GET['orderby']}&orderby=$_GET['orderby']{/if}"><i class="tll"></i>铁牢</a></li>
+		<li><a href="./forum.php?mod=forumdisplay&fid=294&filter=typeid&typeid=382&sortid=18{if $_GET['orderby']}&orderby=$_GET['orderby']{/if}"><i class="fysj" ></i>焚影</a></li>
+		<li><a href="./forum.php?mod=forumdisplay&fid=294&filter=typeid&typeid=383&sortid=18{if $_GET['orderby']}&orderby=$_GET['orderby']{/if}"><i class="mjt"></i>明尊</a></li>
+		<li><a href="./forum.php?mod=forumdisplay&fid=294&filter=typeid&typeid=384&sortid=18{if $_GET['orderby']}&orderby=$_GET['orderby']{/if}"><i class="yj" ></i>易筋</a></li>
+		<li><a href="./forum.php?mod=forumdisplay&fid=294&filter=typeid&typeid=385&sortid=18{if $_GET['orderby']}&orderby=$_GET['orderby']{/if}"><i class="xs"  ></i>洗髓</a></li>
+		<li><a href="./forum.php?mod=forumdisplay&fid=294&filter=typeid&typeid=386&sortid=18{if $_GET['orderby']}&orderby=$_GET['orderby']{/if}"><i class="qc"></i>紫霞</a></li>
+		<li><a href="./forum.php?mod=forumdisplay&fid=294&filter=typeid&typeid=387&sortid=18{if $_GET['orderby']}&orderby=$_GET['orderby']{/if}"><i class="jc" ></i>太虚</a></li>
+		<li><a href="./forum.php?mod=forumdisplay&fid=294&filter=typeid&typeid=388&sortid=18{if $_GET['orderby']}&orderby=$_GET['orderby']{/if}"><i class="tl" ></i>天罗</a></li>
+		<li><a href="./forum.php?mod=forumdisplay&fid=294&filter=typeid&typeid=389&sortid=18{if $_GET['orderby']}&orderby=$_GET['orderby']{/if}"><i class="jy" ></i>惊羽</a></li>
+		<li><a href="./forum.php?mod=forumdisplay&fid=294&filter=typeid&typeid=390&sortid=18{if $_GET['orderby']}&orderby=$_GET['orderby']{/if}"><i class="cyj" ></i>分山</a></li>
+		<li><a href="./forum.php?mod=forumdisplay&fid=294&filter=typeid&typeid=391&sortid=18{if $_GET['orderby']}&orderby=$_GET['orderby']{/if}"><i class="tgy"></i>铁骨</a></li>
+		<li><a href="./forum.php?mod=forumdisplay&fid=294&filter=typeid&typeid=392&sortid=18{if $_GET['orderby']}&orderby=$_GET['orderby']{/if}"><i class="cj"  ></i>藏剑</a></li>
+		<li><a href="./forum.php?mod=forumdisplay&fid=294&filter=typeid&typeid=393&sortid=18{if $_GET['orderby']}&orderby=$_GET['orderby']{/if}"><i class="gb" ></i>丐帮</a></li>
 	</ul>
 </div>
 
 <!-- jx3pve:宏作者作品搜索 -->
-<h2>宏作者作品</h2>
-<div class="m-macro-search m-pve-search">
+<h2 class="default-sidebar-title">宏作者作品<i class="u-search"></i></h2>
+<div class="default-sidebar-content m-macro-search default-sidebar-search">
 	<form method="post" autocomplete="off" name="searhsort" id="searhsort" action="forum.php?mod=forumdisplay&amp;fid=294&amp;filter=sortid&amp;sortid=18">
-	    <input type="text" name="searchoption[180][value]" size="15" class="px vm" value="" placeholder="输入宏作者名称">
-	    <button type="submit" class="u-button-search" name="searchsortsubmit"><em>搜索</em></button>
+	    <input type="text" name="searchoption[180][value]" size="15" class="u-text" value="" placeholder="输入宏作者名称">
+	    <button type="submit" class="u-button-search u-button" name="searchsortsubmit"><em>搜索</em></button>
 	</form>
 </div>
 
 <!-- jx3pve:宏辅助 -->
-<h2>辅助工具<a class="more" href="http://www.jx3pve.com/tool" target="_blank">更多</a></h2>
-<div class="m-macro-tool m-downlist">
+<h2 class="default-sidebar-title">辅助工具<a class="u-more" href="./tool" data-target="blank" title="获取更多">更多</a></h2>
+<div class="default-sidebar-content m-macro-tool default-sidebar-downlist">
 	<!--{block/1288}-->
 </div>
 
 <!-- jx3pve:宏文档 -->
-<h2>帮助文档<a class="u-btn-pub2" href="http://www.jx3pve.com/forum.php?mod=post&action=newthread&fid=2" target="_blank"><i></i>分享</a></h2>
-<div class="m-macro-help m-alist">
+<h2 class="default-sidebar-title">帮助文档<a class="u-btn-pub2" href="./forum.php?mod=post&action=newthread&fid=2"  data-target="blank" title="分享经验"><i></i>分享</a></h2>
+<div class="default-sidebar-content m-macro-help default-sidebar-wordlist">
 	<!--{block/1287}-->
 </div>
 
 <!-- jx3pve:任务 -->
-<h2>任务奖励<a class="more" href="http://www.jx3pve.com/home.php?mod=task" target="_blank"></a></h2>
-<div class="m-macro-task m-tasklist">
+<h2 class="default-sidebar-title">任务奖励<a class="u-more" href="./home.php?mod=task" data-target="blank" title="查看更多">更多任务</a></h2>
+<div class="default-sidebar-content m-macro-task default-sidebar-tasklist">
 	<!--{block/1285}-->
+</div>
+
+<!-- jx3pve:语法手册 -->
+<h2 class="default-sidebar-title m-macro-systax">语法手册<a class="u-more" href="./misc.php?mod=faq&action=faq&id=53&messageid=75" data-target="blank" title="查看更多">完整手册</a></h2>
+<div class="default-sidebar-content m-macro-systax">
+	<!--{block/987}-->
 </div>
