--- a/css/module/forum/post/c-post-extra.less
+++ b/css/module/forum/post/c-post-extra.less
@@ -11,7 +11,7 @@
 }
 .c-post-category{
 	.pa;.lt(0,0);
-	.size(103px,28px);
+	.size(143px,28px);
 	
 	.c-post-category-bg{
 		.pa;.lt(0,0);.z(1);
@@ -25,7 +25,7 @@
 		.pa;.lt(0,0);.z(2);
 		.db;.full;.x;    
 		background-color:#fff;
-		a{.full(x) !important;}
+		a{.w(auto) !important;}
 	}
 
 }
@@ -34,7 +34,7 @@
 	float:none;
 	.u-subject{
 		.db;
-		margin-left:110px;
+		margin-left:143px + 10px;
 		margin-right:123px;
 	}
 	.px{
