--- a/css/module/widget/w-gotofloor.less
+++ b/css/module/widget/w-gotofloor.less
@@ -29,7 +29,8 @@
 		border:none;
 		margin-right:0;
 		background-color: #f7f7f7;
-    	padding: 5px 0;
+	    padding: 3px 0;
+    	border-radius: 4px;
 	}
 	.w-gotofloor-box{
 		.fr;
