--- a/css/system/faq.less
+++ b/css/system/faq.less
@@ -110,6 +110,9 @@
 .pg_faq .i-header{
 	.z(40);
 }
+.alertHTML.ua-responsive .screen-s .m-faq-sidebar{
+	top:@c-header-height + @c-alert-height;
+}
 
 .m-faq-content{
 	/*.pr;overflow:visible;
