--- a/css/system/feedback.less
+++ b/css/system/feedback.less
@@ -24,7 +24,7 @@
 	.w(180px);
 }
 .c-post-subject .u-subject{
-	margin-left:210px;
+	margin-left:180px + 10px;
 }
 #typeid_ctrl_menu.sltm{
 	.w(180px) !important;
@@ -38,23 +38,3 @@
 .ua-responsive .screen-s #typeid_ctrl_menu.sltm{
 	.w(80%) !important;
 }
-
-
-#u-feedback-showtip{
-	.none;
-	background:~"url('@{url}icon/info.gif') no-repeat right center / auto 80%";
-	color:#222;
-}
-.ua-responsive .screen-s{
-	#u-feedback-showtip{.db;}
-	#u-feedback-showtipct{.none;}
-
-	#u-feedback-showtipct{
-		.pf;.lt(0,0);.full;
-		z-index: 40;
-	    background-color: rgba(255,255,255,0.95);
-	    padding: 20px;
-	    box-sizing: border-box;
-        overflow: auto;
-	}
-} 
