--- a/template/default/common/panel.htm
+++ b/template/default/common/panel.htm
@@ -5,11 +5,13 @@
 			t-$_G[tid] 
 			sort-$_GET['sortid'] sort-$_G['forum_thread']['sortid'] 
 			type-$_GET['typeid'] type-$_G['forum_thread']['typeid'] 
+			uid-$_G[uid] 
 			pg_{CURMODULE} 
 			{if $_G['basescript'] === 'portal' && CURMODULE === 'list' && !empty($cat)} {$cat['bodycss']}{/if}
 		" 
 	onkeydown="if(event.keyCode==27) return false;"
 >
+	<span id="e-uid" class="none">$_G[uid]</span>
 	<div id="append_parent"></div><div id="ajaxwaitid"></div>
 	<!--{if $_GET['diy'] == 'yes' && check_diy_perm($topic)}-->
 		<!--{template common/header_diy}-->
