--- a/template/default/forum/发布页/post_editor_extra.htm
+++ b/template/default/forum/发布页/post_editor_extra.htm
@@ -9,7 +9,7 @@
 			<!--{if $isfirstpost && !empty($_G['forum'][threadtypes][types])}-->
 				<span class="c-post-category-ct">
 					<!--{if $_G['forum']['ismoderator'] || empty($_G['forum']['threadtypes']['moderators'][$thread[typeid]])}-->
-					<select name="typeid" id="typeid">
+					<select name="typeid" id="typeid" width="120">
 					<option value="0">{lang select_thread_catgory}</option>
 					<!--{loop $_G['forum'][threadtypes][types] $typeid $name}-->
 						<!--{if empty($_G['forum']['threadtypes']['moderators'][$typeid]) || $_G['forum']['ismoderator']}-->
