--- a/template/default/widget/w_category.htm
+++ b/template/default/widget/w_category.htm
@@ -9,31 +9,33 @@
 			<!--{hook/forumdisplay_threadtype_inner}-->
 
 			<!-- 全部 -->
-				<a class="u-all u-item" id="ttp_all" {if !$_GET['typeid'] && !$_GET['sortid']}class="xw1 a"{/if} href="forum.php?mod=forumdisplay&fid=$_G[fid]{if $_G['forum']['threadsorts']['defaultshow']}&filter=sortall&sortall=1{/if}{if $_GET['archiveid']}&archiveid={$_GET['archiveid']}{/if}">{lang forum_viewall}</a>
+				<a class="u-item u-all" id="ttp_all" href="forum.php?mod=forumdisplay&fid=$_G[fid]{if $_GET['sortid']}&filter=sortid&sortid=$_GET['sortid']{/if}{if $_G['forum']['threadsorts']['defaultshow']}&filter=sortall&sortall=1{/if}{if $_GET['orderby']}&orderby=$_GET['orderby']{/if}{if $_GET['archiveid']}&archiveid={$_GET['archiveid']}{/if}">{lang forum_viewall}</a>
 
 			<!-- 主题分类 -->
 				<!--{if $_G['forum']['threadtypes']}-->
-				<!--{loop $_G['forum']['threadtypes']['types'] $id $name}-->
-				<!--{if $_GET['typeid'] == $id}-->
-				<a class="u-type on u-item" href="forum.php?mod=forumdisplay&fid=$_G[fid]{if $_GET['sortid']}&filter=sortid&sortid=$_GET['sortid']{/if}{if $_GET['archiveid']}&archiveid={$_GET['archiveid']}{/if}"><!--{if $_G[forum][threadtypes][icons][$id] && $_G['forum']['threadtypes']['prefix'] == 2}--><img class="vm" src="$_G[forum][threadtypes][icons][$id]" alt="" /> <!--{/if}-->$name<!--{if $showthreadclasscount[typeid][$id]}--><span class="xg1 num">$showthreadclasscount[typeid][$id]</span><!--{/if}--></a>
-				<!--{else}-->
-				<a class="u-type u-item" href="forum.php?mod=forumdisplay&fid=$_G[fid]&filter=typeid&typeid=$id$forumdisplayadd[typeid]{if $_GET['archiveid']}&archiveid={$_GET['archiveid']}{/if}"><!--{if $_G[forum][threadtypes][icons][$id] && $_G['forum']['threadtypes']['prefix'] == 2}--><img class="vm" src="$_G[forum][threadtypes][icons][$id]" alt="" /> <!--{/if}-->$name<!--{if $showthreadclasscount[typeid][$id]}--><span class="xg1 num">$showthreadclasscount[typeid][$id]</span><!--{/if}--></a>
-				<!--{/if}-->
-				<!--{/loop}-->
+					<!--{loop $_G['forum']['threadtypes']['types'] $id $name}-->
+						<!--{if $_GET['typeid'] == $id}-->
+							<a class="u-type on u-item" href="forum.php?mod=forumdisplay&fid=$_G[fid]{if $_GET['sortid']}&sortid=$_GET['sortid']{/if}{if $_GET['orderby']}&orderby=$_GET['orderby']{/if}{if $_GET['archiveid']}&archiveid={$_GET['archiveid']}{/if}"><!--{if $_G[forum][threadtypes][icons][$id] && $_G['forum']['threadtypes']['prefix'] == 2}--><img class="vm" src="$_G[forum][threadtypes][icons][$id]" alt="" /> <!--{/if}-->$name<!--{if $showthreadclasscount[typeid][$id]}--><span class="xg1 num">$showthreadclasscount[typeid][$id]</span><!--{/if}--></a>
+						<!--{else}-->
+							<a class="u-type u-item" href="forum.php?mod=forumdisplay&fid=$_G[fid]&filter=typeid&typeid=$id$forumdisplayadd[typeid]{if $_GET['archiveid']}&archiveid={$_GET['archiveid']}{/if}"><!--{if $_G[forum][threadtypes][icons][$id] && $_G['forum']['threadtypes']['prefix'] == 2}--><img class="vm" src="$_G[forum][threadtypes][icons][$id]" alt="" /> <!--{/if}-->$name<!--{if $showthreadclasscount[typeid][$id]}--><span class="xg1 num">$showthreadclasscount[typeid][$id]</span><!--{/if}--></a>
+						<!--{/if}-->
+					<!--{/loop}-->
 				<!--{/if}-->
 
 			<!-- 类型分类 -->
 				<!--{if $_G['forum']['threadsorts']}-->
+					
 					<!--{if $_G['forum']['threadtypes']}-->
 					<span class="divding pipe">|</span>
 					<!--{/if}-->
-				<!--{loop $_G['forum']['threadsorts']['types'] $id $name}-->
-				<!--{if $_GET['sortid'] == $id}-->
-				<a class="u-sort on u-item" href="forum.php?mod=forumdisplay&fid=$_G[fid]{if $_GET['typeid']}&filter=typeid&typeid=$_GET['typeid']{/if}{if $_GET['archiveid']}&archiveid={$_GET['archiveid']}{/if}">$name<!--{if $showthreadclasscount[sortid][$id]}--><span class="xg1 num">$showthreadclasscount[sortid][$id]</span><!--{/if}--></a>
-				<!--{else}-->
-				<a class="u-sort u-item" href="forum.php?mod=forumdisplay&fid=$_G[fid]&filter=sortid&sortid=$id$forumdisplayadd[sortid]{if $_GET['archiveid']}&archiveid={$_GET['archiveid']}{/if}">$name<!--{if $showthreadclasscount[sortid][$id]}--><span class="xg1 num">$showthreadclasscount[sortid][$id]</span><!--{/if}--></a>
-				<!--{/if}-->
-				<!--{/loop}-->
+
+					<!--{loop $_G['forum']['threadsorts']['types'] $id $name}-->
+						<!--{if $_GET['sortid'] == $id}-->
+							<a class="u-sort on u-item" href="forum.php?mod=forumdisplay&fid=$_G[fid]{if $_GET['typeid']}&filter=typeid&typeid=$_GET['typeid']{/if}{if $_GET['orderby']}&orderby=$_GET['orderby']{/if}{if $_GET['archiveid']}&archiveid={$_GET['archiveid']}{/if}">$name<!--{if $showthreadclasscount[sortid][$id]}--><span class="xg1 num">$showthreadclasscount[sortid][$id]</span><!--{/if}--></a>
+						<!--{else}-->
+							<a class="u-sort u-item" href="forum.php?mod=forumdisplay&fid=$_G[fid]&filter=sortid&sortid=$id$forumdisplayadd[sortid]{if $_GET['orderby']}&orderby=$_GET['orderby']{/if}{if $_GET['archiveid']}&archiveid={$_GET['archiveid']}{/if}">$name<!--{if $showthreadclasscount[sortid][$id]}--><span class="xg1 num">$showthreadclasscount[sortid][$id]</span><!--{/if}--></a>
+						<!--{/if}-->
+					<!--{/loop}-->
 				<!--{/if}-->
 
 			<!--{hook/forumdisplay_filter_extra}-->
