--- a/css/user/credit/buy.less
+++ b/css/user/credit/buy.less
@@ -86,7 +86,10 @@
 	}
 
 	.m-gobutton-buy{
-		&:extend(.u-btn-blue);
+		background-color:#0084ff;
+		&:hover{
+			background-color:#339dff;
+		}
 	}
 }
 //充值记录
@@ -95,6 +98,8 @@
 		padding:0 10px;
 		margin-top:10px;
 		.lh(28px);
+		.w(80px);
+		.fz(13px,28px);
 	}
 }
 
