--- a/css/user/credit/vip.less
+++ b/css/user/credit/vip.less
@@ -30,3 +30,10 @@
 	table{width:100%;}
 	td{border:1px solid #ddd;padding:2px 5px;line-height:24px;color:#777;}
 }
+
+.vip-pc-buy .m-gobutton{
+	background-color:#c00;
+	&:hover{
+		background-color:#e60000;
+	}
+}
