修订 + 手机导航

--- a/css/pve/macro/sidebar.less
+++ b/css/pve/macro/sidebar.less
@@ -66,7 +66,6 @@
 	li{.w(50%);}
 }
 
-
 //任务
 .m-macro-task{
 	.u-list-1{
@@ -81,10 +80,6 @@
 }
 
 
-
-
-
-
 .ua-responsive .screen-s.f-294{
 	.i-header.showSidebar{
 		.z(40);
@@ -92,7 +87,7 @@
 	.default-sidebar{
 		.none;
 		.w(100%);
-		.pf;top:@c-header-height;.z(40);
+		.pf;left:0;top:@c-header-height;.z(40);
 	}
 	.default-sidebar-title{
 		padding:10px;
