--- a/css/pve/macro/view.less
+++ b/css/pve/macro/view.less
@@ -13,7 +13,7 @@
 		border-bottom:1px dashed #ddd;
 		em{
 			margin-right:15px;
-			.dbi;.w(80px);
+			.dbi;.w(88px);
 			color:#555;
 		}
 		span{
@@ -88,9 +88,9 @@
 }
 .m-macro-roleinfo{
 	.pr;
-	&:before{content:'';.db;width:90%;height:1px;background-color:#ddd;.pa;right:0;top:12px;}
+	&:before{content:'';.db;width:90%;height:1px;background-color:#ddd;.pa;right:0;top:17px;}
 	h3{
-		.dbi;width:70px;.lh(24px);border-radius:24px;background-color:#eee;.x;color:#555;
+		.dbi;width:70px;.fzlh(13px,24px);border-radius:24px;background-color:#eee;.x;color:#555;
 		.pr;.z(2);
 	}
 	.content{
@@ -99,9 +99,9 @@
 }
 .m-macro-frag{
 	.pr;
-	&:before{content:'';.db;width:90%;height:1px;border-bottom:1px dotted #ddd;.pa;right:0;top:12px;}
+	&:before{content:'';.db;width:90%;height:1px;border-bottom:1px dotted #ddd;.pa;right:0;top:17px;}
 	h3{
-		.dbi;width:70px;.lh(24px);border-radius:24px;background-color:#0084ff;.x;color:#fff;
+		.dbi;width:70px;.fzlh(13px,24px);border-radius:24px;background-color:#0084ff;.x;color:#fff;
 		.pr;.z(2);
 	}
 	#macro-copy-tips{
