--- a/css/user/msg/notice.less
+++ b/css/user/msg/notice.less
@@ -1,33 +1,9 @@
 @import url('../../public/base.less');		//函数
 @import url('../../global/var.less');			//常量
 @import url('../../global/color.less');		//配色
+@import url('common.less');		//配色
 
-.user-msg-notice-nav{
-	.clearfix;
-	.lh(28px);
-	border:1px solid #ddd;
-	.r(2px);
 
-	padding:0;
-	margin:0;
-	a{
-		border:none;
-		padding:0;
-		background: none;
-	}
-
-	li{
-		.fl;
-		padding:0 10px;
-	}
-	em{
-		.none;
-	}
-	.a{
-		background-color:#f2f2f2;
-		a{background: none;font-weight:normal;}
-	}
-}
 .user-msg-notice-subnav{
 	.clearfix;
 	li{.fl;margin-right:10px;}
