--- a/css/user/msg/pm.less
+++ b/css/user/msg/pm.less
@@ -2,7 +2,7 @@
 @import url('../../global/var.less');			//常量
 @import url('../../global/color.less');		//配色
 @import url('../../module/ui/button.less');
-
+@import url('common.less');		//配色
 .user-msg-pm-title{
 	.pr;
 	em{.fz(13px);color:@yel;}
@@ -15,7 +15,7 @@
 	.lh(32px);
 }
 
-.user-msg-pm-nav{
+/*.user-msg-nav{
 	.clearfix;
 	.lh(28px);
 	border:1px solid #ddd;
@@ -27,13 +27,7 @@
 	.a{
 		background-color:#f2f2f2;
 	}
-	.y{
-		//background-color:#555;
-		//.color(#eee,#eee,#eee);
-		.fr;
-		.r(0 2px 2px 0);
-	}
-}
+}*/
 
 .pm_op_r{padding-right:0;}
 .pm_op_r .xw1{font-weight:normal;}
