--- a/template/about/portal/portal_topic_sitemap.htm
+++ b/template/about/portal/portal_topic_sitemap.htm
@@ -13,50 +13,44 @@
 			</div>
 		</div>
 
-		<div class="m-sitemap-block">
-			<h2>门户系统</h2>
-			<ul>
-				<li><a href="./">首页</a></li>
-				<li><a href="./push">推送头条</a></li>
-				<li><a href="./news/">历史头条</a></li>
-			</ul>
-		</div>
-
-		<div class="m-sitemap-block">
+		<div class="m-sitemap-block m-sitemap-channel">
 			<h2>网站栏目</h2>
 			<ul>
-				<li><a href="./macro">宏库</a></li>
-				<li><a href="./tool">工具</a></li>
-				<li><a href="./app">应用</a></li>
-				<li><a href="./fam">副本</a></li>
-				<li><a href="./raid">团队</a></li>
-				<li><a href="./face">捏脸</a></li>
-				<li><a href="./biz">交易</a></li>
-				<li><a href="./story">回忆录</a></li>
-				<li><a href="./bbs">综合</a></li>
-				<li><a href="./wiki">维基百科<span>(Building)</span></a></li>
+				<li><a href="./">首页<i class="u-index"></i></a></li>
+				<li><a href="./macro">宏库<i class="u-macro"></i></a></li>
+				<li><a href="./app">应用<i class="u-app"></i></a></li>
+				<li><a href="./tool">工具<i class="u-tool"></i></a></li>
+				<li><a href="./role">职业<i class="u-role"></i></a></li>
+				<li><a href="./fam">副本<i class="u-fam"></i></a></li>
+				<li><a href="./raid">团队<i class="u-raid"></i></a></li>
+				<li><a href="./face">捏脸<i class="u-face"></i></a></li>
+				<!-- <li><a href="./wall">壁纸</a></li> -->
+				<li><a href="./biz">交易<i class="u-biz"></i></a></li>
+				<li><a href="./story">回忆录<i class="u-story"></i></a></li>
+				<li><a href="./bbs">综合<i class="u-bbs"></i></a></li>
+				<li><a href="./wiki">维基百科<em>(Building)</em><i class="u-wiki"></i></a></li>
 			</ul>
 		</div>
 
-		<div class="m-sitemap-block">
+		<div class="m-sitemap-block m-sitemap-zt">
 			<h2>专题专辑</h2>
 			<ul>
 				<li><a href="./fb">副本专题<span>(PC版)</span></a></li>
 			</ul>
 		</div>
 
-		<div class="m-sitemap-block">
+		<div class="m-sitemap-block m-sitemap-old">
 			<h2>停更栏目</h2>
 			<ul>
 				<li><a href="./pet">宠物<span>(PC版)</span></a></li>
 				<li><a href="./video">视频<span>(PC版)</span></a></li>
-				<li><a href="./cloud">超级宏官网<span>(停更)</span></a></li>
-				<li><a href="./forum.php?mod=forumdisplay&fid=85">超级宏论坛<span>(停更)</span></a></li>
-				<li><a href="./group.php">群组<span>(停更)</span></a></li>
+				<li><a href="./cloud">超级宏官网<span>(已和谐)</span></a></li>
+				<li><a href="./forum.php?mod=forumdisplay&fid=85">超级宏论坛<span>(已和谐)</span></a></li>
+				<li><a href="./group.php">群组<span>(私版)</span></a></li>
 			</ul>
 		</div>
 
-		<div class="m-sitemap-block">
+		<div class="m-sitemap-block m-sitemap-member">
 			<h2>账号系统</h2>
 			<ul>
 				<li><a href="./login">登录</a></li>
@@ -66,7 +60,7 @@
 			</ul>
 		</div>
 
-		<div class="m-sitemap-block">
+		<div class="m-sitemap-block m-sitemap-user">
 			<h2>用户系统</h2>
 			<ul>
 				<li><a href="./home.php?mod=space&do=pm">消息</a></li>
@@ -76,31 +70,34 @@
 				<li><a href="./home.php?mod=space&do=blog">空间</a></li>
 				<li><a href="./home.php?mod=task">扩展</a></li>
 				<li><a href="./home.php?mod=spacecp&ac=sendmail">设置</a></li>
+				<li><a href="./home.php?mod=spacecp&ac=promotion">其它</a></li>
 			</ul>
 		</div>
 
-		<div class="m-sitemap-block">
+		<div class="m-sitemap-block m-sitemap-help">
 			<h2>帮助系统</h2>
 			<ul>
 				<li><a href="./faq">FAQ</a></li>
 				<li><a href="./feedback">反馈中心</a></li>
+				<li><a href="./push">推送头条</a></li>
 			</ul>
 		</div>
 
-		<div class="m-sitemap-block">
+		<div class="m-sitemap-block m-sitemap-system">
 			<h2>网站系统</h2>
 			<ul>
 				<li><a href="./sitemap">站点地图</a></li>
-				<li><a href="http://search.jx3pve.com/cse/search?s=16227720870024914123&entry=1&q=" target="_blank">搜索系统</a></li>
-				<li><a href="./system/404.html" target="_blank">404错误引导</a></li>
+				<li><a href="./news/">历史头条</a></li>
 			</ul>
 			<ul>
+				<li><a href="http://search.jx3pve.com/cse/search?s=16227720870024914123&entry=1&q=" target="_blank">搜索系统</a></li>
+				<li><a href="./system/404.html" target="_blank">404错误引导</a></li>
 				<li><a href="./misc.php?mod=stat"  target="_blank">站点统计<span>(PC版)</span></a></li>
 				<li><a href="./archiver"  target="_blank">Archiver<span>(PC版)</span></a></li>
 			</ul>
 		</div>
 
-		<div class="m-sitemap-block">
+		<div class="m-sitemap-block m-sitemap-about">
 			<h2>关于我们</h2>
 			<ul>
 				<li><a href="./portal.php?mod=topic&topicid=116">网站简介</a></li>
@@ -116,4 +113,5 @@
 		</div>
 	</div>
 </div>
+<script src="http://js.jx3pve.com/js/page/page-sitemap.min.js"></script>
 <!--{subtemplate common/footer}-->
