--- a/template/yylmacro/home/扩展/space_task_detail.htm
+++ b/template/yylmacro/home/扩展/space_task_detail.htm
@@ -1,7 +1,5 @@
-<h1 class="mt cl">
-
+<h1 class="mt cl none">
 	<img src="{STATICURL}image/feed/task.gif" alt="{lang task}" class="vm" /> {lang task_detail}
-
 </h1>
 
 <!--{if $task['endtime']}--><p class="xg2 m-user-task-tips">{lang task_endtime}</p><!--{/if}-->
