--- a/template/yylmacro/home/扩展/space_task_list.htm
+++ b/template/yylmacro/home/扩展/space_task_list.htm
@@ -1,4 +1,4 @@
-<h1 class="mt">
+<h1 class="mt none">
 	<img src="{STATICURL}image/feed/task.gif" alt="{lang task}" class="vm" />
 	<!--{if $_GET['item'] == "doing"}-->{lang task_doing}
 	<!--{elseif $_GET['item'] == "done"}-->{lang task_done}
