--- a/template/yylmacro/home/积分/会员/vip_pc_header.htm
+++ b/template/yylmacro/home/积分/会员/vip_pc_header.htm
@@ -53,7 +53,7 @@
 				<span>
 					<i class="counts"></i>
 					<b class="number"><!--{echo getuserprofile('extcredits4');}--></b>
-					<a class="addcre" href="./buy">充值</a>
+					<!-- <a class="addcre" href="./buy">充值</a> -->
 				</span>
 			</p>
 		</div>
