--- a/template/yylmacro/home/消息/space_notice.htm
+++ b/template/yylmacro/home/消息/space_notice.htm
@@ -22,7 +22,10 @@
 						<div class="bm bw0">
 							
 							<h1 class="mt"><img alt="pm" src="{STATICURL}image/feed/nts.gif" class="vm" /> {lang remind}</h1>
-							<ul class="user-msg-notice-nav">
+							<ul class="user-msg-nav">
+								<li class="y"><a href="home.php?mod=space&do=pm&subop=setting" class="xi2">{lang pm_setting}</a></li>
+								<li$actives[privatepm] $actives[newpm]><a href="home.php?mod=space&do=pm&filter=privatepm">{lang private_pm}</a></li>
+								<li$actives[announcepm]><a href="home.php?mod=space&do=pm&filter=announcepm">{lang announce_pm}</a></li>
 								<!--{loop $_G['notice_structure'] $key $type}-->
 								<li $opactives[$key]><em class="notice_$key"></em><a href="home.php?mod=space&do=notice&view=$key"><!--{eval echo lang('template', 'notice_'.$key)}--><!--{if $_G['member']['category_num'][$key]}-->($_G['member']['category_num'][$key])<!--{/if}--></a></li>
 								<!--{/loop}-->
