Signed-off-by: unknown <17229398@qq.com>

--- a/css/user/space.less
+++ b/css/user/space.less
@@ -3,9 +3,11 @@
 @import url('../global/color.less');		//配色
 @import url('../module/ui/text.less');		//配色
 
-	.jx3pve-container{
-		padding-bottom:10px;
-	}
+@import url('space/share.less');
+
+.jx3pve-container{
+	padding-bottom:10px;
+}
 
 //公共头部
 	#pt{
@@ -50,67 +52,6 @@
 
 //留言板
 
-//分享
-	//前台
-	#share_ul{
-		margin-top:10px;
-		li{
-			margin-bottom:10px;
-			.h{
-				background-color:#f7f7f7;
-				border-bottom:none;
-				.y{.none;}
-				padding:0 10px;
-				margin-bottom:10px;
-			}
-			.ec{
-				padding:0 20px;
-				line-height:2.5;
-				.d a{.color(@blue-link);&:hover{text-decoration:underline;}}
-				.quote{
-					color:#888;
-				}
-			}
-		}
-	}
-	//后台
-	.m-share{
-		padding:5px 10px 20px 10px;
-		background-color:#f7f7f7;
-		border:1px dashed #ddd;
-		margin-bottom:20px;
-	}
-	.m-share-title{
-		.w(auto) !important;
-		line-height:2.5;
-		.xi2{
-			.fr;
-		}
-	}
-	.m-share-box{
-		.pr;
-	}
-	.m-share-input{
-		.db;
-		margin-right:58px;
-		.u-text{
-			.db;
-			padding:0 10px;
-			.w(100%);
-			box-sizing:border-box;
-		}
-	}
-	.m-share-button{
-		.pa;.rt(0,0);
-		.w(48px);
-		box-sizing:border-box;
-		.lh(28px);
-	}
-	.m-share-desc{
-		.w(100%);
-		padding:0 10px;
-		box-sizing:border-box;
-	}
 
 //记录
 	.m-record-item{
